@@ -5,6 +5,7 @@ File sizes are limited to 2GB rather than 4GB as accessing > 2GB doesn't work.
 Added UnixEx option to set filetype based on executable permissions.
 Added filename encoding option.
 Improved NFS3 writes for servers that support unstable storage.
+Added support for accessing files from callbacks.
 
 v1.08 26-Oct-05
 Fixed bug where sometimes filetypes would get changed when a file was renamed.
